force-app/main/default/objects/Your_Investment__c/Your_Investment__c.object-meta.xml
<CustomObject>
    <label>Your Investment</label>
    <nameField>
        <label>Your Investment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Your Investments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>