force-app/main/default/objects/Your_Investment__c/fields/Amount_Invested__c.field-meta.xml
<CustomField>
    <fullName>Amount_Invested__c</fullName>
    <label>Amount Invested</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>