force-app/main/default/objects/Your_Investment__c/fields/Investment_Type__c.field-meta.xml
<CustomField>
    <fullName>Investment_Type__c</fullName>
    <label>Investment Type</label>
    <length>15</length>
    <type>Text</type>
</CustomField>