force-app/main/default/objects/Your_Investment__c/fields/Logo__c.field-meta.xml
<CustomField>
    <fullName>Logo__c</fullName>
    <label>Logo</label>
    <type>Url</type>
</CustomField>