force-app/main/default/objects/Your_Investment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Total_Quantity__c</columns>
    <columns>Amount_Invested__c</columns>
    <columns>Investment_Type__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>